force-app/main/default/objects/Litmos__AccountProgramResult__c/Litmos__AccountProgramResult__c.object-meta.xml
<CustomObject>
    <label>Account Program Result</label>
    <nameField>
        <label>AccountProgramResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Program Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>