force-app/main/default/objects/Litmos__AccountProgramResult__c/fields/Litmos__AccountId__c.field-meta.xml
<CustomField>
    <fullName>Litmos__AccountId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>AccountProgramResults</relationshipName>
    <type>Lookup</type>
</CustomField>