force-app/main/default/objects/Litmos__AccountProgramResult__c/fields/Litmos__LearningPathId__c.field-meta.xml
<CustomField>
    <fullName>Litmos__LearningPathId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning Path</label>
    <referenceTo>Litmos__LearningPath__c</referenceTo>
    <relationshipName>AccountProgramResults</relationshipName>
    <type>Lookup</type>
</CustomField>