force-app/main/default/objects/Litmos__AccountProgramResult__c/listViews/Litmos__All.listView-meta.xml
<ListView>
    <fullName>Litmos__All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>Litmos__AccountId__c</columns>
    <columns>Litmos__CourseId__c</columns>
    <columns>Litmos__LearningPathId__c</columns>
    <columns>Litmos__Completed_Count__c</columns>
    <columns>Litmos__Total_Count__c</columns>
    <columns>Litmos__Total_Sum_Percentages__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>